syntax = "proto3";

package core;
option go_package = "./proto;core";

import "common.proto";
import "google/protobuf/field_mask.proto";

// PaymentTask encapsulates the payment goals a user has per credit account
message PaymentTask {
  string payment_task_id = 1;
  string user_id = 2;
  string transaction_id = 3;
  string account_id = 4;
  MetaData meta_data = 5;
}

// MetaData is any preferences a user may have regarding how a payment task should be incorporated into a Payment Plan
message MetaData {
  PlanType preferred_plan_type = 1;
  double preferred_timeline = 2;
  PaymentFrequency preferred_payment_freq = 3;
}

// CRUD Methods
message CreatePaymentTaskRequest {
  PaymentTask payment_task = 1;
}

message GetPaymentTaskRequest {
  string id = 1;
}

message UpdatePaymentTaskRequest {
  string id = 1;
  PaymentTask payment_task = 2;
  google.protobuf.FieldMask mask = 3;
}

message DeletePaymentTaskRequest {
  string id = 1;
}

message ListPaymentTaskRequest {}

message ListPaymentTaskResponse {
  repeated PaymentTask payment_tasks = 1;
}

message DeletePaymentTaskResponse {
  DELETE_STATUS status = 1;
  PaymentTask payment_task = 2;
}